# logic-analyzer-mcp

./: .env.example  .gitignore  .mcpbignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  pyproject.toml  start.ps1
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKENDS.md  FLEET_INTEGRATION.md  HARDWARE.md  PRD.md  SETUP.md  TOOLS.md
src/logic_analyzer_mcp/: __init__.py  __main__.py  app.py  capabilities.py  config.py  server.py  transport.py  web.py
src/logic_analyzer_mcp/models/: __init__.py  capture.py  device.py
src/logic_analyzer_mcp/services/: __init__.py  registry.py  session.py
src/logic_analyzer_mcp/services/backends/: __init__.py  base.py  sigrok.py  simulator.py
src/logic_analyzer_mcp/tools/: __init__.py
src/logic_analyzer_mcp/tools/portmanteau/: __init__.py  capture.py  configure.py  decode.py  device.py  help.py  trigger.py
src/logic_analyzer_mcp/utils/: export.py  logger.py
tests/: conftest.py
tests/integration/: test_capture_flow.py
tests/unit/: test_help.py  test_simulator.py
webapp/: biome.json  index.html  package-lock.json  package.json  start.ps1  vite.config.ts
webapp/src/: App.tsx  main.tsx
webapp/src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
webapp/src/lib/: api.ts
webapp/src/pages/: dashboard.tsx  decode.tsx  help.tsx  settings.tsx  tools.tsx  trace.tsx
